Avoid setting certificate when SSL is disabled.

--- a/config/kong.yml.etlua.sample
+++ b/config/kong.yml.etlua.sample
@@ -49,8 +49,10 @@ databases_available:
       timeout: 1000
       keepalive: 60000 # in milliseconds
       ssl: <%= cassandra_ssl %>
+<% if cassandra_ssl then -%>
       ssl_verify: true
       ssl_certificate: "/<%= cassandra_cert %>"
+<% end -%>
 
 ## Cassandra cache configuration
 database_cache_expiration: 5 # in seconds
