--- a/config/kong.conf.etlua.sample
+++ b/config/kong.conf.etlua.sample
@@ -97,7 +97,9 @@ plugins = bundled,hello-world-header,ndfd-xml-as-json
 # NGINX
 #------------------------------------------------------------------------------
 
-proxy_listen = 0.0.0.0:<%= proxy_port %>
+# Heroku Kong expects listeners to be set via environment variables
+# such as `KONG_PROXY_LISTEN`
+#proxy_listen = 0.0.0.0:8000
                                  # Address and port on which Kong will accept
                                  # HTTP requests.
                                  # This is the public-facing entrypoint of
@@ -106,11 +108,11 @@ proxy_listen = 0.0.0.0:<%= proxy_port %>
 # Note: See http://nginx.org/en/docs/http/ngx_http_core_module.html#listen for
 # a description of the accepted formats for this and other *_listen values.
 
-proxy_listen_ssl = 0.0.0.0:<%= proxy_ssl_port %>
+#proxy_listen_ssl = 0.0.0.0:8443
                                  # Address and port on which Kong will accept
                                  # HTTPS requests if `ssl` is enabled.
 
-admin_listen = 0.0.0.0:<%= admin_api_port %>
+#admin_listen = 0.0.0.0:8001
                                  # Address and port on which Kong will expose
                                  # an entrypoint to the Admin API.
                                  # This API lets you configure and manage Kong,
@@ -331,11 +333,13 @@ database = postgres              # Determines which of PostgreSQL or Cassandra
                                  # Accepted values are `postgres` and
                                  # `cassandra`.
 
-pg_host = <%= pg_host %>         
-pg_port = <%= pg_port %>         
-pg_user = <%= pg_user %>         
-pg_password = <%= pg_password %> 
-pg_database = <%= pg_dbname %>   
+# Heroku Kong expects listeners to be set via environment variables
+# such as `KONG_PG_HOST`
+#pg_host = <%= pg_host %>         
+#pg_port = <%= pg_port %>         
+#pg_user = <%= pg_user %>         
+#pg_password = <%= pg_password %> 
+#pg_database = <%= pg_database %>   
 
 pg_ssl = on                      # Toggles client-server TLS connections
                                  # between Kong and PostgreSQL.
